# pyswitchcontroller

./: README.md  pyproject.toml
arduino/: ft232.ino
src/pyswitchcontroller/: controller.py
