[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyswitchcontroller"
version = "0.0.1"
description = "switch controller with python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",  
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pyftdi",
    "opencv-python",
    "pyqt6",
]
